--- a/cmd/config.yaml
+++ b/cmd/config.yaml
@@ -1,14 +1,12 @@
 genai:
   gemini:
     api_key: teste
-
 database:
   type: mongo
   mongo:
     host: uri
-    user:username
+    user: username
     password: pass
-
 webserver:
-  port: 8080
-  address: "0.0.0.0"    
+  port: "8080"
+  host: "0.0.0.0"    
