--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -42,6 +42,24 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
+      - name: Build and push Docker image
+        id: push_latest
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        with:
+          context: .
+          file: ./build/Dockerfile
+          push: true
+          tags: latest
+
+      # - name: Build and push Docker image
+      #   id: push_commit_id
+      #   uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+      #   with:
+      #     context: .
+      #     file: ./build/Dockerfile
+      #     push: true
+      #     tags: latest
+
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
         with:
