--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -51,14 +51,14 @@ jobs:
           push: true
           tags: latest
 
-      # - name: Build and push Docker image
-      #   id: push_commit_id
-      #   uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-      #   with:
-      #     context: .
-      #     file: ./build/Dockerfile
-      #     push: true
-      #     tags: latest
+      - name: Build and push Docker image
+        id: push_commit_id
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        with:
+          context: .
+          file: ./build/Dockerfile
+          push: true
+          tags: ${GITHUB_SHA::6}
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
