--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -50,6 +50,13 @@ jobs:
           file: ./build/Dockerfile
           push: true
           tags: latest
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Declare some variables
+        shell: bash
+        run: |
+          echo "sha_short=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
+          echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> "$GITHUB_ENV"
 
       - name: Build and push Docker image
         id: push_commit_id
@@ -58,7 +65,8 @@ jobs:
           context: .
           file: ./build/Dockerfile
           push: true
-          tags: ${GITHUB_SHA::6}
+          tags: ${{ env.sha_short }}
+          labels: ${{ steps.meta.outputs.labels }}
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
