--- a/cmd/config.yaml
+++ b/cmd/config.yaml
@@ -10,3 +10,10 @@ database:
 webserver:
   port: "8080"
   host: "0.0.0.0"    
+firebase:
+  apiKey: "AIzaSyBoYp0yAty8ocZc_3Dqi13c24KnQLZozpc"
+  authDomain: "prosperar-n1en5.firebaseapp.com"
+  projectId: "prosperar-n1en5"
+  storageBucket: "prosperar-n1en5.firebasestorage.app"
+  messagingSenderId: "184363131164"
+  appId: "1:184363131164:web:11da6aac9b048c91121ad9"
