test with firebase auth

--- a/.github/workflows/ai-review.yaml
+++ b/.github/workflows/ai-review.yaml
@@ -4,13 +4,13 @@ on:
   push:
     branches:
       - "*"
-    paths:
-      - "**/*.go"
-      - "go.mod"
-      - "go.sum"
-      - "Dockerfile"
-      - "docker-compose.yml"
-      - "Makefile"
+    # paths:
+    #   - "**/*.go"
+    #   - "go.mod"
+    #   - "go.sum"
+    #   - "Dockerfile"
+    #   - "docker-compose.yml"
+    #   - "Makefile"
 
 permissions:
   contents: read
