--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -1,4 +1,6 @@
-name: golangci-lint
+name: Go Lint
+run-name: golang-lint
+
 on:
   push:
     branches:
@@ -25,3 +27,8 @@ jobs:
         uses: golangci/golangci-lint-action@v8
         with:
           version: v2.1
+      - name: gofmt
+        uses: Jerome1337/gofmt-action@v1.0.5
+        with:
+          gofmt-path: './'
+          gofmt-flags: '-l -d'
