ci: update workflows

--- a/.github/workflows/golangci-lint.yaml
+++ b/.github/workflows/golangci-lint.yaml
@@ -5,8 +5,8 @@ on:
   push:
     branches:
       - "*"
-    paths:
-      - '**.go'
+    # paths:
+    #   - '**.go'
   # pull_request:
 
 permissions:
