--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -5,9 +5,9 @@ on:
   push:
     branches:
       - "*"
-    paths:
-      - '**.go'
-  pull_request:
+  #   paths:
+  #     - '**.go'
+  # pull_request:
 
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
