--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -12,7 +12,7 @@ on:
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   GAR_LOCATION: us-central1
-  SERVICE: dashfin-backend
+  SERVICE: dashfin-backend-app
   REGION: us-central1
   REPOSITORY: cloud-run-source-deploy/dashfin-backend-app
 
