feat: enable cache

--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -4,7 +4,8 @@ run-name: publish-image
 on:
   push:
     branches:
-      - "*"
+      - "main"
+      - "develop"
   #   paths:
   #     - '**.go'
   # pull_request:
