--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -6,8 +6,8 @@ on:
     branches:
       - "main"
       - "develop"
-  #   paths:
-  #     - '**.go'
+    paths:
+      - '**.go'
   # pull_request:
 
 env:
