--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -23,7 +23,7 @@ env:
   CLOUD_RUN_REGION: ${{ vars.CLOUD_RUN_REGION }}
   
   # Base names for services and secrets - User needs to set these in GitHub Secrets
-  CLOUD_RUN_SERVICE_NAME_BASE: ${{ vars.CLOUD_RUN_SERVICE_NAME_BASE }} 
+  CLOUD_RUN_SERVICE_NAME_BASE: ${{ env.CLOUD_RUN_SERVICE_NAME_BASE }} 
   SECRET_NAME_IN_MANAGER_BASE: ${{ vars.SECRET_NAME_IN_MANAGER_BASE }}
   ENV_VAR_NAME_FOR_SECRET_IN_RUN_BASE: ${{ vars.ENV_VAR_NAME_FOR_SECRET_IN_RUN_BASE }}
 
