--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -56,7 +56,7 @@ jobs:
   deploy:
     name: Build and Deploy
     runs-on: ubuntu-latest
-    environment: "${{ github.ref_name }}" == "develop" ] # <- se for main == production diferente disso develop
+    environment: develop # <- se for main == production diferente disso develop
     permissions:
       contents: read
       id-token: write
