--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -21,7 +21,7 @@ env:
   GCP_PROJECT_ID: ${{ vars.GCP_PROJECT_ID }}
   GAR_LOCATION: ${{ vars.GAR_LOCATION }} 
   CLOUD_RUN_REGION: ${{ vars.CLOUD_RUN_REGION }}
-  GCP_REPOSITORY: ${{ vars.GCP_REPOSITORY }} }}
+  GCP_REPOSITORY: ${{ vars.GCP_REPOSITORY }}
   GCP_SERVICE_IMAGE: ${{ vars.GCP_SERVICE_IMAGE }}
   
   # Base names for services and secrets - User needs to set these in GitHub Secrets
@@ -33,7 +33,7 @@ jobs:
   deploy-production:
     # Este job será executado APENAS se a branch for 'main'
   #  if: github.ref == 'refs/heads/jules_wip_13387545001984943234'
-    name: Build and Deploy
+    name: Build TSHOT
     runs-on: ubuntu-latest
     environment: production
 
@@ -47,6 +47,7 @@ jobs:
       FINAL_ENV_VAR_NAME_FOR_SECRET_IN_RUN: ''
       ACTUAL_SECRET_VALUE: ''
       IMAGE_TAG_SUFFIX: ''
+      IMAGE_PATH: ''
       ENVIRONMENT_NAME: ''
 
     steps:
@@ -57,6 +58,50 @@ jobs:
         run: |
           echo "${{ vars.GAR_LOCATION }}-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/${{ vars.GCP_REPOSITORY }}/${{ vars.GCP_SERVICE_IMAGE }}:${{ github.sha }}"
           echo "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_REPOSITORY }}/${{ env.GCP_SERVICE_IMAGE }}:${{ github.sha }}"
+          echo "IMAGE_PATH=${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_REPOSITORY }}/${{ env.GCP_SERVICE_IMAGE }}:${{ github.sha }}" >> $GITHUB_ENV
+
+      - name: Validate Lógica de deploy para Production
+        run: |
+          echo "${{ env.IMAGE_PATH }}"
+
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Google Auth
+        id: auth
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
+      - name: Set up GCloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ env.GCP_PROJECT_ID }}
+
+      - name: Configure Docker
+        run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev --quiet
+
+      - name: Docker Auth
+        id: docker-auth
+        uses: 'docker/login-action@v3'
+        with:
+          registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
+          username: _json_key
+          password: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Build Docker image
+        env:
+          IMAGE_NAME: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.FINAL_CLOUD_RUN_SERVICE_NAME }}:${{ github.sha }}
+        run: |
+          echo "Building Docker image: $IMAGE_NAME"
+          docker build -t $IMAGE_NAME -f Dockerfile .
+
+      - name: Push Docker image to Artifact Registry
+        env:
+          IMAGE_NAME: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.FINAL_CLOUD_RUN_SERVICE_NAME }}:${{ github.sha }}
+        run: |
+          echo "Pushing Docker image: $IMAGE_NAME"
+          docker push $IMAGE_NAME
 
   deploy-develop:
     name: Build and Deploy
