update http client

--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -110,6 +110,7 @@ jobs:
     name: Build and Deploy
     runs-on: ubuntu-latest
     environment: develop
+    if: github.ref == 'refs/heads/develop'
     permissions:
       contents: read
       id-token: write
