--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -50,7 +50,7 @@ jobs:
           echo "IMAGE_TAG_PATH=${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_REPOSITORY }}/${{ env.GCP_SERVICE_NAME }}/${{ env.GCP_SERVICE_NAME }}:${{ github.sha }}" >> $GITHUB_ENV
           echo "IMAGE_LAST_PATH=${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_REPOSITORY }}/${{ env.GCP_SERVICE_NAME }}/${{ env.GCP_SERVICE_NAME }}:latest" >> $GITHUB_ENV
           echo "SERVICE_NAME=${{ env.GCP_SERVICE_NAME }}-prd" >> $GITHUB_ENV
-          echo "ACTUAL_SECRET_VALUE=${{ secrets.GEMINI_API_KEY }}" >> $GITHUB_ENV
+          echo "ACTUAL_SECRET_VALUE=${{ secrets.CONFIG_YAML }}" >> $GITHUB_ENV
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -77,7 +77,19 @@ jobs:
           username: _json_key
           password: ${{ secrets.GCP_SA_KEY }}
 
+      - name: Build Docker image
+        env:
+          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
+        run: |
+          echo "Building Docker image: $IMAGE_NAME"
+          docker build -t $IMAGE_NAME -f Dockerfile .
 
+      - name: Push Docker image to Artifact Registry
+        env:
+          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
+        run: |
+          echo "Pushing Docker image: $IMAGE_NAME"
+          docker push $IMAGE_NAME
 
       - name: Create or Update Secret in Secret Manager
         run: |
