--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -69,20 +69,20 @@ jobs:
       - name: Configure Docker
         run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev --quiet
 
-      - name: Docker Auth
-        id: docker-auth
-        uses: 'docker/login-action@v3'
-        with:
-          registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
-          username: _json_key
-          password: ${{ secrets.GCP_SA_KEY }}
-
-      - name: Build Docker image
-        env:
-          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
-        run: |
-          echo "Building Docker image: $IMAGE_NAME"
-          docker build -t $IMAGE_NAME -f Dockerfile .
+#      - name: Docker Auth
+#        id: docker-auth
+#        uses: 'docker/login-action@v3'
+#        with:
+#          registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
+#          username: _json_key
+#          password: ${{ secrets.GCP_SA_KEY }}
+#
+#      - name: Build Docker image
+#        env:
+#          IMAGE_NAME: ${{ env.IMAGE_TAG_PATH }}
+#        run: |
+#          echo "Building Docker image: $IMAGE_NAME"
+#          docker build -t $IMAGE_NAME -f Dockerfile .
 
       - name: Push Docker image to Artifact Registry
         env:
