--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -40,7 +40,7 @@ jobs:
       ACTUAL_SECRET_VALUE: '' 
 
     steps:
-      - name: Checkout do código
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Determine Environment and Set Variables
@@ -50,9 +50,6 @@ jobs:
           echo "IMAGE_TAG_PATH=${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_REPOSITORY }}/${{ env.GCP_SERVICE_NAME }}/${{ env.GCP_SERVICE_NAME }}:${{ github.sha }}" >> $GITHUB_ENV
           echo "IMAGE_LAST_PATH=${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_REPOSITORY }}/${{ env.GCP_SERVICE_NAME }}/${{ env.GCP_SERVICE_NAME }}:latest" >> $GITHUB_ENV
           echo "SERVICE_NAME=${{ env.GCP_SERVICE_NAME }}-prd" >> $GITHUB_ENV
-
-      - name: Checkout
-        uses: actions/checkout@v4
 
       - name: Google Auth
         id: auth
@@ -65,9 +62,9 @@ jobs:
         with:
           project_id: ${{ env.GCP_PROJECT_ID }}
 
-      - name: Configure Docker
-        run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev --quiet
-
+#      - name: Configure Docker
+#        run: gcloud auth configure-docker ${{ env.GAR_LOCATION }}-docker.pkg.dev --quiet
+#
 #      - name: Docker Auth
 #        id: docker-auth
 #        uses: 'docker/login-action@v3'
