ci: tests with workflow

--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -116,11 +116,8 @@ jobs:
             --platform managed \
             --allow-unauthenticated \
             --port 8080 \
-            --add-volume name=config-volume-def,secret=${{ env.SERVICE_NAME }}:latest \
-            --add-volume name=auth-volume-def,secret=gcp-auth:latest \
-            --add-volume-mount volume=config-volume-def,mount-path=/etc/config-secrets \
-            --add-volume-mount volume=auth-volume-def,mount-path=/etc/auth-secrets \
-            --set-env-vars PATH_CONFIG=/etc/config-secrets \
-            --project ${{ env.GCP_PROJECT_ID }}
+            --set-secrets /app/config.yaml=${{ env.SERVICE_NAME }}:latest \
+            --set-env-vars PATH_CONFIG=/app \
+            --project ${{ env.GCP_PROJECT_ID }} \
             --quiet
           echo "Deployment to ${{ env.SERVICE_NAME }} completed."
