ci: tests with workflow

--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -116,7 +116,8 @@ jobs:
             --platform managed \
             --allow-unauthenticated \
             --port 8080 \
-            --add-volume name=config-volume-def,secret=${{ env.SERVICE_NAME }}:latest \
+            --add-volume name=config-volume,secret=${{ env.SERVICE_NAME }} \
+            --volume-mount name=config-volume,mount-path=/app/config.yaml \
             --set-secrets /app/config.yaml=${{ env.SERVICE_NAME }}:latest \
             --set-env-vars PATH_CONFIG=/app \
             --project ${{ env.GCP_PROJECT_ID }} \
