ci: tests with workflow

--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -117,6 +117,8 @@ jobs:
             --allow-unauthenticated \
             --port 8080 \
             --update-secrets=PATH=projects/671107607354/secrets/dashfin-backend-app-prd:29 \
+            --update-secrets=teste123=projects/671107607354/secrets/gcp-auth:latest \
+            --set-env-vars PATH_CONFIG=/app \
             --project ${{ env.GCP_PROJECT_ID }} \
             --quiet
           echo " --set-env-vars PATH_CONFIG=/app \
