ci: tests with workflow

--- a/.github/workflows/publish-image.yaml
+++ b/.github/workflows/publish-image.yaml
@@ -116,8 +116,8 @@ jobs:
             --platform managed \
             --allow-unauthenticated \
             --port 8080 \
-            --update-secrets=PATH=projects/671107607354/secrets/dashfin-backend-app-prd:29 \
-            --update-secrets=teste123=projects/671107607354/secrets/gcp-auth:latest \
+            --update-secrets=/app/config.yaml=projects/671107607354/secrets/dashfin-backend-app-prd:latest \
+            --update-secrets=/app/auth.json=projects/671107607354/secrets/gcp-auth:latest \
             --set-env-vars PATH_CONFIG=/app \
             --project ${{ env.GCP_PROJECT_ID }} \
             --quiet
